@@ -66,7 +66,7 @@
 
 \vspace{1cm}\par
 
-{\large Edition May 2021}
+{\large Edition September 2021}
 \end{raggedright}
 
 \clearpage
